<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name"
        android:textStyle="italic"
        android:inputType="text"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toppings"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:paddingBottom="10dp"
        android:textColor="@android:color/black"/>
    <CheckBox
        android:id="@+id/oreo_check_Box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oreo"
        android:paddingLeft="20dp"
        android:textSize="16sp"/>

    <CheckBox
        android:id="@+id/beng_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bengbeng"
        android:paddingLeft="20dp"
        android:textSize="16sp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jumlah"
        android:layout_marginTop="10dp"
        android:textAllCaps="true"
        android:textColor="@android:color/black"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <Button
            android:id="@+id/increment"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="+"
            android:onClick="increment"/>
        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="0"
            android:textSize="16sp"
            android:textColor="@android:color/black" />
        <Button
            android:id="@+id/decrement"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="-"
            android:onClick="decrement"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/harga"
        android:textAllCaps="true"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/order_summary_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:text="Rp. 0"
        android:textSize="16sp"
        android:textColor="@android:color/black" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keteranganPesanan"
        android:textStyle="bold"
        android:onClick="submitOrder"/>
</LinearLayout>